--- a/css/styles_new.css
+++ b/css/styles_new.css
@@ -1932,12 +1932,26 @@ progress {
 }
 
 @media (max-width: 575.98px) {
+    .device-wrapper {
+        transform: scale(1.3); /* Increase the size */
+    }
+    .screen img {
+        max-width: 120%;
+        height: auto;
+    }
   .table-responsive-sm {
     overflow-x: auto;
     -webkit-overflow-scrolling: touch;
   }
 }
 @media (max-width: 767.98px) {
+    .device-wrapper {
+        transform: scale(1.2); /* Increase the size */
+    }
+    .screen img {
+        max-width: 115%;
+        height: auto;
+    }
   .table-responsive-md {
     overflow-x: auto;
     -webkit-overflow-scrolling: touch;
